@@ -277,7 +277,7 @@ as follows:</p>
           </tr>
           <tr valign="baseline">
             <td><em>Applies to:</em>  </td>
-            <td>All elements</td>
+            <td>All elements <span class="specissue">In SVG 1.1 it applies only to "container elements (except ‘mask’) and graphics elements"</span></td>
           </tr>
           <tr valign="baseline">
             <td><em>Inherited:</em>  </td>
@@ -1505,8 +1505,8 @@ of the premultiplication for all pixels with A = 1.</p>
 values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 1 0"</pre>
         </li>
         <li>For <span class="attr-value">type="saturate"</span>, <span
-          class="attr-name">values</span> is a single real number value (0 to
-          1). A <span class="attr-value">saturate</span> operation is
+          class="attr-name">values</span> is a single real number value.
+          A <span class="attr-value">saturate</span> operation is
           equivalent to the following matrix operation: 
       <p>
       <object data="mathml/feColorMatrix01.mml" type="application/mathml+xml" width="100%" height="130">
@@ -1516,6 +1516,9 @@ values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 1 0"</pre>
 | A' |     |           0                   0                   0        1  0 |   | A |
 | 1  |     |           0                   0                   0        0  1 |   | 1 |</pre>
       </object>
+      <div class="note authoring">A value of <span class="attr-value">0</span> produces a fully desaturated (grayscale) filter result,
+      while a value of <span class="attr-value">1</span> passes the filter input image through unchanged.
+      Values outside the 0..1 range under- or oversaturates the filter input image respectively.</div>
     </p>
         </li>
         <li>For <span class="attr-value">type="hueRotate"</span>, <span
