@@ -1,5 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
+2011-10-29  Erik Dahlström  <ed@opera.com>
+
+- Removed the 0..1 range restriction in the values attribute on
+  feColorMatrix with type="saturate".
 
 2011-09-07  Dean Jackson  <dino@apple.com>
 
